maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:22: error: ';' expected but integer literal found.
    droite()compt-=1;
                   ^